syntax = "proto3";

option java_package = "rust.nostr.android.signer.proxy.protobuf";
option java_outer_classname = "AndroidSignerProxyProto";

package android_signer;

service AndroidSigner {
  rpc IsExternalSignerInstalled (IsExternalSignerInstalledRequest) returns (IsExternalSignerInstalledReply) {}
}

message IsExternalSignerInstalledRequest {}

message IsExternalSignerInstalledReply {
  bool installed = 1;
}
